Lee el fichero de paises
