# Funciones/funciones.py
@@ -4,19 +4,15 @@ import io
 
 funciones_bp = Blueprint('funciones', __name__)
 
-@funciones_bp.route('/', methods=['GET'])
-def index():
-    return jsonify({"mensaje": "¡Hola desde mi API!"})
-
 @funciones_bp.route('/cargar_csv', methods=['POST'])
 def cargar_csv():
     if 'archivo' not in request.files:
-        return jsonify({'mensaje': 'No se proporcionó ningún archivo'}), 400
+        return jsonify({'mensaje': 'No se proporcionó ningún archivo en el Blueprint Funciones'}), 400
 
     archivo = request.files['archivo']
 
     if archivo.filename == '':
-        return jsonify({'mensaje': 'No se seleccionó ningún archivo'}), 400
+        return jsonify({'mensaje': 'No se seleccionó ningún archivo en el Blueprint Funciones'}), 400
 
     if archivo and archivo.filename.endswith('.csv'):
         try:
@@ -36,6 +32,6 @@ def cargar_csv():
             return jsonify(respuesta), 200
 
         except Exception as e:
-            return jsonify({'mensaje': f'Error al procesar el archivo CSV: {str(e)}'}), 500
+            return jsonify({'mensaje': f'Error al procesar el archivo CSV en el Blueprint Funciones: {str(e)}'}), 500
 
-    return jsonify({'mensaje': 'El archivo no tiene el formato CSV correcto'}), 400
+    return jsonify({'mensaje': 'El archivo no tiene el formato CSV correcto en el Blueprint Funciones'}), 400
